--- a/styles.css
+++ b/styles.css
@@ -383,28 +383,31 @@ footer{
     padding: 20px;
 }
 .box3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 0;
     border-radius: 0px 20px 20px 0px;
     overflow: hidden;
     transition: 2s;
     background-color: #99E2D0;
-    color: #99E2D0;       
+    color: #99E2D0; 
+    display: flex;  
+    align-items: center;  
+      
 }
-.box3 .far{
+.box3 .fas{
+    
     background-color: white;
     border-radius: 50%;
     color: #99E2D0;
+   
 }
 .boutonCarte:hover .box3{
     width: 25%;
-    display: flex;
-    justify-content: center;
+    
+    
     
 }
-.boutonCarte:hover .box3 .far{
+.boutonCarte:hover .box3 .fas{
+    opacity: 1;
     animation: checkTourne 1.5s linear;
 }
 @keyframes checkTourne {
