--- a/styles.css
+++ b/styles.css
@@ -539,7 +539,8 @@ body{
     }
     footer{
         display: flex;
-        justify-content: space-evenly;
+        flex-direction: column;
+        align-items: center;
     }
     
 }
