--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ p{
     color: #f2f2f2;
     cursor: pointer;
     background: linear-gradient(#9356DC,#FF79DA);
+    z-index: 1;
 }
 .boutonExplorer button:hover{
     opacity: 0.8;
@@ -218,7 +219,7 @@ p{
     transition: 1s;
     color: transparent;
     background: linear-gradient(#9356DC,#FF79DA);
-    background-clip: text;
+    -webkit-background-clip: text;
     opacity: 1;
 }
 .coeur:hover .far{
@@ -293,6 +294,7 @@ footer{
 .imageRestaurant img{
     width: 100%;
     height: 250px;
+    object-fit: cover;
 }
 
 .CarteEntiere{
@@ -364,6 +366,7 @@ footer{
 }
 .box1{
    font-family: "Roboto"; 
+   font-size: 14px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
@@ -425,6 +428,9 @@ footer{
     align-items: center;
 }
 .boutonCommander button{
+    
+    font-size: 15px;
+    font-family: "Roboto","sans-serif";
     padding: 10px 20px;
     border-radius: 20px;
     border: none;
@@ -474,24 +480,25 @@ footer{
     0%{transform: scaleX(0.1);}
     100%{transform: scaleX(1);}
 }
-body{
-    animation: chargement 2s linear;
+header,.Reservez,.Fonctionnement,.Restaurants{
+    animation: bodyOpacity 2s linear;
 }
-@keyframes chargement {
-    0%{opacity: 0.1;}
-    100%{opacity: 1;}
+@keyframes bodyOpacity {
+    from {opacity: 0.2;}
+    to {opacity: 0.2;}
 }
 .loader{
     position:fixed;
-    top: 40%;
-    left: 20%;
-    width: 100px;
-    height: 100px;
-    font-size: 50px;
+    width: 100%;
+    height: 100%;
+    font-size: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #FF79DA;
     animation: tournicoti 2s linear ;
     animation-fill-mode:both;
-    z-index: 10000;
+    
 }
 @keyframes tournicoti{
     
@@ -500,9 +507,7 @@ body{
     40% {color: #9356DC; opacity: 1;} 
     60% {opacity: 0;}
     80% {opacity: 1; color: #99E2D0;}
-    100% {opacity: 0;}
-    
-    
+    100% {opacity: 0;}  
 }
 
 /* MEDIAQUERIES carte principale */
@@ -537,10 +542,29 @@ body{
         grid-template-rows: 1fr 1fr;
         column-gap: 20px;
     }
+
     footer{
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    
+}
+@media  screen and (min-width:1000px){
+    .CarteEntiere{
+        margin: 40px;
+        
+    }
+    .restaurantH1{
+        font-size: 20px;
+        
+    }
+    .entree,.plats,.desserts{
+        width: 33%;
+       
+    }
+    .soulignementH4{
+        padding-bottom: 20px;
     }
     
 }
