--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,10 @@ footer{
 .devenir p{
     padding-left: 7px;
 }
+.contact a{
+    text-decoration: none;
+    color: white;
+}
 
          /* MENU */
 
