webkit transform pour chrome .devenir

--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,8 @@ footer{
 }
 .devenir .fas{
     font-size: 11px;
-    rotate: 320deg;
+    
+    -webkit-transform:rotate(320deg) ;
 
 }
 .devenir p{
